--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<a href="https://github.com/SintheticLabs/docs.sintheticlabs.com">docs</a>
+<a href="HOW_TO_HACK_FH2.txt">HOW_TO_HACK_FH2.txt</a><br>
+<a href="hackback.txt">hackback.txt</a><br>
+<a href="hackback_ht.txt">hackback_ht.txt</a><br>
+<a href="so_you_want_to_be_a_darknet_drug_lord.txt">so_you_want_to_be_a_darknet_drug_lord.txt</a><br>
