--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a href="HOW_TO_HACK_FH2.txt">HOW_TO_HACK_FH2.txt</a><br>
-<a href="hackback.txt">hackback.txt</a><br>
-<a href="hackback_ht.txt">hackback_ht.txt</a><br>
-<a href="so_you_want_to_be_a_darknet_drug_lord.txt">so_you_want_to_be_a_darknet_drug_lord.txt</a><br>
+<a href="HOW_TO_HACK_FH2.txt">HOW_TO_HACK_FH2.txt</a> - How "Freedom Hosting 2" was hacked. <br>
+<a href="hackback.txt">hackback.txt</a> - How "Gamma Group" was hacked.<br>
+<a href="hackback_ht.txt">hackback_ht.txt</a> - How "Hacking Team" was hacked.<br>
+<a href="so_you_want_to_be_a_darknet_drug_lord.txt">so_you_want_to_be_a_darknet_drug_lord.txt</a> - Details the operational security of a Tor hidden service.<br>
